# biolib

./: .gitignore  README.md  pyproject.toml
databases/: interpro.py  pdb.py
files/: fasta_file.py  pdbx_mmcif_file.py
scripts/: cif_collection_to_fasta.py  cif_collection_to_fasta.py~  cif_files.fasta  find_catalytic_serine_in_fasta.py  test.fasta
src/: 5XJH.cif  main.py  regex_patterns.py  test.py
src/biolib/: __init__.py  regex_patterns.py
src/biolib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/biolib/classes/databases/: interpro.py
src/biolib/databases/: interpro.py  pdb.py  uniprot.py
src/biolib/files/: fasta.py  fasta.py~  pdbcif.py  pdbcif.py~
src/biolib/util/: regex_patterns.py
src/files/: pdbcif.py  pdbcif.py~  pdbx_mmcif.py  pdbx_mmcif_file.py  util.py
test/: main.py
test/data/: .#3a2l_full.cif  esterases.fasta
test/data/cif_files/: 3a2l_full.cif  3a2m_full.cif  3a2n_full.cif  3a6z_full.cif  3a70_full.cif  3afi_full.cif  3aik_full.cif  3ail_full.cif  3aim_full.cif  3ain_full.cif  3aio_full.cif  3aj3_full.cif  3aja_full.cif  3ans_full.cif  3ant_full.cif  3auk_full.cif  3azo_full.cif  3azp_full.cif  3azq_full.cif  3m3d_full.cif  3m81_full.cif  3m82_full.cif  3m83_full.cif  3mga_full.cif  3mil_full.cif  3mlm_full.cif  3msr_full.cif  3mun_full.cif  3muo_full.cif  3mve_full.cif  3w04_full.cif  3w05_full.cif  3w06_full.cif  3w2t_full.cif  3w7v_full.cif  3w9b_full.cif  3w9u_full.cif  3wa6_full.cif  3wa7_full.cif  3wi7_full.cif  (+34 more)
test/test_classes/test_files/: test_pdbcif.py  test_pdbcif.py~
util/: misc.py  point.py
(+10 files in other folders)
